--- a/scss/partials/_slack.scss
+++ b/scss/partials/_slack.scss
@@ -40,6 +40,12 @@ div.slack-wrap {
         display: block;
         content: "";
         max-width: 1200px;
+
+        @include mobile() {
+          border-radius: 0;
+          left: 0;
+          transform: translateX(0%);
+        }
       }
 
       h1.slack-headline {
